--- a/Student-Productivity/src/app/login/login.component.css
+++ b/Student-Productivity/src/app/login/login.component.css
@@ -1,67 +1,100 @@
-.page-container {
-  position: absolute;
-  display: flex;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
+.body {
+    position: absolute;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 
-.flex-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 20px;
+/*-----Login CSS-----*/
+
+.login-container {
+    display: flex;
+    width: 500px;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.3);
 }
 
-#container {
-  position: relative;
-  display: flex;
-  flex: 1 1 auto;
-  justify-content: center;
-  align-items: center;
+.login {
+    position: relative;
+    display: flex;
+    width: 90%;
+    height: 90%;
+    flex-direction: column;
+    align-items: center;
 }
 
-#container h1 {
-  font-size: 200%;
-  align-self: flex-end;
+/*-----Account Creation CSS-----*/
+
+.create-account {
+    display: flex;
+    width: 90%;
+    height: 90%;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
 }
 
-#credentials {
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
-  padding: 10%;
+/*-----Hide Class CSS-----*/
+
+.hide-login-container {
+    display: none;
 }
 
-#credentials input {
-  border-radius: 5px;
+.hide-create-account { 
+    display: none;
 }
 
-#login-button {
-  display: flex;
-  flex: 1 1 auto;
-  justify-content: flex-end;
-  gap: 5%;
-  padding-right: 5%;
+.hide-login-error {
+    display: none;
 }
 
-#login {
-  height: 50%;
-  width: 20%;
-  font-size: 1em;
-  align-self: center;
-  border-radius: 15px;
-  border: 0.5px solid black;
-  transition: 0.2s ease-in-out;
+#title {
+    
 }
 
-#login:hover {
-  background-color: rgb(172, 172, 172);
-  transition: 0.2s ease-in-out;
+/*-----Universal CSS-----*/
+
+#login-error {
+    color: red;
+}
+
+.interact-button {
+    border-radius: 10px;
+    font-size: 1rem;
+    height: 2rem;
+    border: none;
+    transition: 0.2s ease-in-out;
+    
+}
+
+.interact-button:hover {
+    background-color: rgb(199, 199, 199);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+    transition: 0.2s ease-in-out;
+}
+
+.credentials {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 5%;
+    border: 1px solid black;
+    border-radius: 2.5px;   
+}
+
+#button-container {
+    display: flex;
+    box-sizing: border-box;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
+    padding-right: 2rem;
+    margin-bottom: 5%;
 }
