--- a/Student-Productivity/src/app/login/login.component.html
+++ b/Student-Productivity/src/app/login/login.component.html
@@ -7,24 +7,24 @@
         <!-------LOGIN FORM------->
         <!--Form that will display all the information for logging in; will be the first thing that loads on our webpage-->
         <form class="login" id="login">
-            <h1 id="title">Login</h1>
+            <h1 class="title">Login</h1>
 
             <!--Error message will not be visible initially; will appear if user inputs incorrect user/password combination-->
             <h4 class="hide-login-error" id="login-error">Invalid email/username or password</h4>
             <input class="credentials" id="user-info" type="text" placeholder="Username/Email" autofocus/>
             <input class="credentials" id="password-info" type="password" placeholder="Password"/>
             <div id="button-container">
-                <button class="interact-button" (click)="goToCreateAccount()">Create Account</button>
+                <button class="interact-button" type="button" (click)="goToCreateAccount()">Create Account</button>
 
                 <!--Login button only has error function, but can be used to route to homepage of user-->
-                <button class="interact-button" (click)="showLoginError()">Log In</button>
+                <button class="interact-button" type="submit" (click)="showLoginError()">Log In</button>
             </div>
         </form>
 
         <!-------CREATE ACCOUNT FORM------->
         <!--Form that will display all the information for creating an account; this will take place of login information-->
         <form class="create-account hide-create-account" id="create-account">
-            <h1>Create Account</h1>
+            <h1 class="title">Create Account</h1>
             <input class="credentials" type="text" placeholder="First Name"/>
             <input class="credentials" type="text" placeholder="Last Name"/>
             <input class="credentials" type="text" placeholder="Email"/>
