--- a/Student-Productivity/src/app/login/login.component.css
+++ b/Student-Productivity/src/app/login/login.component.css
@@ -31,7 +31,9 @@
 }
 
 #login-error {
+    margin-top: 0px;
     color: red;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /*-----Account Creation CSS-----*/
@@ -62,7 +64,7 @@
 /*-----Universal CSS-----*/
 
 .title {
-    
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .interact-button {
@@ -87,6 +89,12 @@
     transition: 0.2s ease-in-out;
 }
 
+.interact-button:hover:active {
+    background-color: rgb(153, 153, 153);
+    transform: scale(1.00);
+    transition: 1ms ease-in-out;
+}
+
 .credentials {
     box-sizing: border-box;
     width: 100%;
@@ -102,6 +110,10 @@
     transform: scale(1.02);
     outline: none;
     transition: 0.2s ease-in-out;
+}
+
+.credentials:focus::placeholder {
+    color: white;
 }
 
 #button-container {
