--- a/Student-Productivity/src/app/timer/timer-itself/timer-itself.component.html
+++ b/Student-Productivity/src/app/timer/timer-itself/timer-itself.component.html
@@ -3,9 +3,13 @@
 #  feed in conversions into text boxes then have that text box calculate
   #  and turn into seconds to feed into leftTime
   # fix bug: constrain hours minutes and seconds'
+  #fix bug: time inputted ends up registering in the textbox.
+  #clear the textbox?
 #  bonus: into the place where the numbers themselves display
 # Reference post tutorial  for inputting custom values into a textbox
 #      and having the  display hold the value
+#once the timer is done there should be a sound
+#abreak button green background1010
 
 #  demo code
 
