--- a/task/src/app/assignment/assignment.component.html
+++ b/task/src/app/assignment/assignment.component.html
@@ -28,24 +28,35 @@
 <input class="button" type="button" value="Submit" (click)="submit()">
 
 <div>
-<h2>Upcoming Assignments</h2>
-
-<ul id="assignmentList">
-<!-- display the list items (li) -->
-</ul>
-
-<table>
-    <tr>
-        <th>Course</th>
-        <th>Assignment</th>
-        <th>Due Date</th>
-        <th>Complete</th>
-    </tr>
-    <tr *ngFor="let homework of homeworks">
-        <td>{{ homework.course }}</td>
-        <td>{{ homework.assignment }}</td>
-        <td>{{ homework.dueDate }}</td>
-        <td><input class="button" type="button" value="Complete" (click)="complete($event)"></td>
-    </tr>
-</table>
+  <h2>Upcoming Assignments</h2>
+  <table>
+      <tr>
+          <th>Course</th>
+          <th>Assignment</th>
+          <th>Due Date</th>
+          <th>Complete</th>
+      </tr>
+      <tr *ngFor="let homework of homeworks">
+          <td>{{ homework.course }}</td>
+          <td>{{ homework.assignment }}</td>
+          <td>{{ homework.dueDate }}</td>
+          <td><input class="button" type="button" value="Complete" (click)="complete(homework)"></td>
+      </tr>
+  </table>
 </div>
+
+<div>
+  <h2>Completed Assignments</h2>
+  <table>
+      <tr>
+          <th>Course</th>
+          <th>Assignment</th>
+          <th>Due Date</th>
+      </tr>
+      <tr *ngFor="let completed of completes">
+          <td>{{ completed.course }}</td>
+          <td>{{ completed.assignment }}</td>
+          <td>{{ completed.dueDate }}</td>
+      </tr>
+  </table>
+  </div>
