Added my Course-create, list component

--- a/Student-Productivity/src/app/navbar/navbar.component.html
+++ b/Student-Productivity/src/app/navbar/navbar.component.html
@@ -1,6 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html"><p class="study_app">The Study App</p></a>
     <img id ="icon" src="../../assets/books.png" alt="">
+    <ul class="navbar-list">
+        <li>
+            <a class="create-assignment" routerLink="/assignment"> Create To Do for assignment!</a>
+        </li>
+        <li>
+            <a class="course-list" routerLink="/courseList">Course List</a>
+        </li>
+    </ul>
+    
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button> -->
