--- a/Student-Productivity/src/app/courses/course-create/course-create.component.css
+++ b/Student-Productivity/src/app/courses/course-create/course-create.component.css
@@ -1,15 +1,21 @@
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
 .course-form {
     display: flex;
     flex-direction: column;
     max-width: 400px;
 }
 
-
 .input-container {
     display: flex;
     float: row;
     justify-content: space-evenly;
 }
+
 
 .warning {
     color: #D8000C;
