--- a/Student-Productivity/src/app/login/login.component.css
+++ b/Student-Productivity/src/app/login/login.component.css
@@ -76,19 +76,22 @@
 }
 
 .title {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Darker Grotesque', sans-serif;
+    font-weight: 300;
+    font-size: 4rem;
     color: white;
+    margin: auto;
 }
 
 .interact-button {
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 1.2rem;
     height: 2rem;
     border: 2px solid rgb(61, 90, 128);
     outline: 1px solid rgba(207, 207, 207, 0) !important;
     background-color: rgb(235, 77, 40);
     color: white;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Darker Grotesque', sans-serif;
     transition: 0.2s ease-in-out;
 }
 
@@ -118,8 +121,8 @@
     margin-bottom: 5%;
     border: 1px solid rgb(61, 90, 128);
     border-radius: 10px;   
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 1rem;
+    font-family: 'Darker Grotesque', sans-serif;
+    font-size: 1.3rem;
     transition: 0.2s ease-in-out;
 }
 
