--- a/Student-Productivity/src/app/navbar/navbar.component.css
+++ b/Student-Productivity/src/app/navbar/navbar.component.css
@@ -1,15 +1,18 @@
 .navbar-brand{
-    font-family: 'Roboto Mono', monospace;;
+    font-family: 'Delius', cursive;
     font-size: 3rem;
     line-height: 1;
     margin-right: 4%;
+    text-align: center;
 }
 .study_app{
-    color: rgb(255, 207, 47);
+    color: #98c1d9;
     font-size: 3rem;
     font-weight: 900;
 }
 #icon {
-    height: 5rem;
-    padding-right: 10rem;
+    height: 4rem;
+    float: left;
+    padding-right: 1rem;
+    text-align: center;
 }
