--- a/Student-Productivity/src/app/app.component.html
+++ b/Student-Productivity/src/app/app.component.html
@@ -1,10 +1,5 @@
 <app-navbar></app-navbar>
-<<<<<<< HEAD
 <app-assignment></app-assignment>
 <app-timer-itself></app-timer-itself>
-=======
-<main>
+<app-calendar></app-calendar>
 <router-outlet></router-outlet>
-</main>
-
->>>>>>> 4dcf86d29917fded69246f81fd196836d739d2d1
