--- a/Student-Productivity/src/app/timer/timer-itself/timer-itself.component.html
+++ b/Student-Productivity/src/app/timer/timer-itself/timer-itself.component.html
@@ -1,13 +1,4 @@
-<!---# to do:
-  # fix bug: constrain hours minutes and seconds'
-  #fix bug: time inputted ends up registering in the textbox.
-  #clear the textbox?
-#  bonus: into the place where the numbers themselves display
-# Reference post tutorial  for inputting custom values into a textbox
-#      and having the  display hold the value
-#once the timer is done there should be a sound
-# error message for invalid values
-#abreak button green background1010--->
+<!---functionality for the timer component of the application--->
 
 <!DOCTYPE html>
 <html>
@@ -20,10 +11,14 @@
     <p>{{newError}}</p>
   </div>
 
+  <!---the timer display--->
+  
   <br>
   <br>
   <countdown [config]="{ leftTime: overallTime }" #newTimeInput2 class="bigtime center-it"></countdown>
   <br>
+  
+  <!---the four timer control buttons--->
 
   <div class="timebuttons center-it">
     <button (click)="newTimeInput2.pause()" class="btn btn-link btn-sm"  class="my-button">pause</button>
@@ -34,6 +29,9 @@
 
   <br>
   <br>
+  
+  <!---the three input boxes the timer takes--->
+  
   <div class="center-it textformat">
   <textarea rows="1" [value]="newHours" #newHoursInput input type="number"></textarea> hours
   <textarea rows="1" [value]="newMinutes" #newMinutesInput></textarea>minutes
