Integrated Components pushing it to the main branch

--- a/Student-Productivity/src/app/home/home.component.html
+++ b/Student-Productivity/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<h1>Home</h1>
+<div class="grid-container">
+    <div class="grid-item"><app-course-list></app-course-list></div>
+    <div class="grid-item"><app-assignment-list></app-assignment-list></div>
+</div>
