--- a/Student-Productivity/src/app/app.component.html
+++ b/Student-Productivity/src/app/app.component.html
@@ -1,11 +1,9 @@
-<<<<<<< HEAD
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300&display=swap" rel="stylesheet">
+
 <app-header></app-header>
-<!-- <app-navbar></app-navbar> -->
 <main>
-<!-- <router-outlet></router-outlet> -->
 <router-outlet></router-outlet>
 </main>
-
-
-
 
