--- a/Student-Productivity/src/app/auth/login/login.component.css
+++ b/Student-Productivity/src/app/auth/login/login.component.css
@@ -59,9 +59,9 @@
     display: none;
 }
 
-.hide-login-error {
+/* .hide-login-error {
     display: none;
-}
+} */
 
 /*-----Universal CSS-----*/
 
@@ -76,19 +76,22 @@
 }
 
 .title {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Darker Grotesque', sans-serif;
+    font-weight: 300;
+    font-size: 4rem;
     color: white;
+    margin: auto;
 }
 
 .interact-button {
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 1.2rem;
     height: 2rem;
     border: 2px solid rgb(61, 90, 128);
     outline: 1px solid rgba(207, 207, 207, 0) !important;
     background-color: rgb(235, 77, 40);
     color: white;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Darker Grotesque', sans-serif;
     transition: 0.2s ease-in-out;
 }
 
@@ -97,6 +100,7 @@
     transform: scale(1.05);
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    background-color: rgb(200, 64, 33);
 }
 
 .interact-button:focus {
@@ -105,7 +109,7 @@
 }
 
 .interact-button:hover:active {
-    background-color: rgb(153, 153, 153);
+    background-color: rgb(200, 64, 33);
     transform: scale(1.00);
     transition: 1ms ease-in-out;
 }
@@ -115,10 +119,10 @@
     width: 100%;
     padding: 1rem;
     margin-bottom: 5%;
-    border: 3px solid rgb(61, 90, 128);
+    border: 1px solid rgb(61, 90, 128);
     border-radius: 10px;   
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 1rem;
+    font-family: 'Darker Grotesque', sans-serif;
+    font-size: 1.3rem;
     transition: 0.2s ease-in-out;
 }
 
@@ -127,6 +131,7 @@
     transform: scale(1.02);
     outline: none;
     transition: 0.2s ease-in-out;
+    color: white;
 }
 
 .credentials:focus::placeholder {
